--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.android.material:material:1.0.0'
-
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
@@ -68,6 +67,8 @@ dependencies {
 
     implementation 'com.nhaarman.supertooltips:library:3.0.+'
     implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.isseiaoki:simplecropview:1.1.8'
+    implementation files('libs/mint-5.2.1.jar')
 }
 
 
